# virtualenv-cache

./: README.rst  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-typing.txt  requirements.txt  virtualenv-cache
.github/workflows/: black.yaml  pytest.yaml
tests/: base.py  conftest.py  test_cache.py  test_cli.py  test_config.py
tests/data/caches/my-project/18648aedbe40f5e25f2fe09f80295ed1a4bc996d1b47fb8d24c4f08a6e565b47/: virtualenv-cache-usage.json
tests/data/caches/my-project/6f741140d80b32fc7fc72313e411569f5af412e8f9e30ae1bc52ac0837157435/: virtualenv-cache-usage.json
tests/data/caches/my-project/b824faa77c86dd2019ef176a3be4af21b02274a7680c44fc75a6606421918154/: virtualenv-cache-usage.json
tests/data/projects/empty-project/: .virtualenv_cache.toml
tests/data/projects/my-project/: .virtualenv_cache.toml
virtualenv_cache/: __init__.py  _cache.py  _config.py  _exceptions.py  cli.py  utils.py
virtualenv_cache/data/: default_virtualenv_cache.toml.template
